--- a/cdn.yaml
+++ b/cdn.yaml
@@ -34,14 +34,14 @@ data:
               matches: ".*Chrome.*"
         action:
           type: block
-      - name: limit-requests-client-ip
-        when:
-          reqProperty: tier
-          equals: "publish"
-        rateLimit:
-          limit: 60
-          window: 10
-          penalty: 60
-          groupBy:
-            - reqProperty: clientIp
-        action: block
+      # - name: limit-requests-client-ip
+      #   when:
+      #     reqProperty: tier
+      #     equals: "publish"
+      #   rateLimit:
+      #     limit: 60
+      #     window: 10
+      #     penalty: 60
+      #     groupBy:
+      #       - reqProperty: clientIp
+      #   action: block
