--- a/cdn.yaml
+++ b/cdn.yaml
@@ -5,15 +5,16 @@ metadata:
 data:
   trafficFilters:
     rules:
-      - name: block-curl
-        when:
-          allOf:
-            - reqProperty: path
-              equals: /us/en/faq.html
-            - reqHeader: user-agent
-              matches: '.*curl.*'
-            action:
-              type: block
+ - name: "block-curl"
+  when:
+    allOf:
+      - reqProperty: path
+        equals: /us/en/faqs.html
+      - reqHeader: user-agent
+        matches: '.*curl.*'
+  action:
+    type: block
+ 
       - name: block-xss
         when:
           reqProperty: tier
